--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Obsidenne">
     <meta name="robots" content="noindex, nofollow, noarchive" />
+    <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <title>Obsidienne</title>
 
