--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,36 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Obsidenne">
     <meta name="robots" content="noindex, nofollow, noarchive" />
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <title>Obsidienne</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/c925e5b7fb.css">
 </head>
 
 <body>
-    <header><h1>Obsidienne</h1></header>
 
-    <main>
-        <ul class="l1">
-        <li><i class="fa fa-git"></i> <a href="https://gitlab.com/Obsidienne">Repositories</a></li>
-        <li>
-            <i class="fa fa-cube"></i> 3D Models
-            <ul class="l2">
-            <li>
-                <a href="models/Aina/readme.txt">Aina</a>
-                -
-                <a href="models/Aina/1.png">s1</a>
-            </li>
-            <li>
-                <a href="models/Stella/readme.txt">Stella</a>
-                -
-                <a href="models/Stella/1.png">s1</a>
-            </li>
-            </ul>
-        </li>
-        </ul>
-    </main>
+<div class="terminal">
+<header>Obsidienne - Terminal</header>
+
+<pre>
+<span class="comment"># Projects</span>
+┌[<span class="user">obsidienne</span>][<span class="host">gitlab.io</span>][<span class="path">~/public</span>]
+└> tree --noreport
+.
+├── Repositories
+│   └── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
+└── 3D Models
+    ├── Aina
+    │   ├── <a href="models/aina/readme.txt">readme.txt</a>
+    │   └── <a href="models/aina/1.png">s1.png</a>
+    └── Stella
+        ├── <a href="models/stella/readme.txt">readme.txt</a>
+        └── <a href="models/stella/1.png">s1.png</a>
+</pre>
+</div>
+
 </body>
 
 </html>
