--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
 └> tree --noreport
 .
 ├── Repositories
-│   └── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
+│   ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
+│   └── <a href="https://github.com/ObsidianWitch">github.com</a>
 └── 3D Models
     ├── Aina
     │   ├── <a href="assets/aina/readme.txt">readme.txt</a>
