--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
 │   └── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
 └── 3D Models
     ├── Aina
-    │   ├── <a href="models/aina/readme.txt">readme.txt</a>
-    │   └── <a href="models/aina/1.png">s1.png</a>
+    │   ├── <a href="assets/aina/readme.txt">readme.txt</a>
+    │   └── <a href="assets/aina/1.png">s1.png</a>
     └── Stella
-        ├── <a href="models/stella/readme.txt">readme.txt</a>
-        └── <a href="models/stella/1.png">s1.png</a>
+        ├── <a href="assets/stella/readme.txt">readme.txt</a>
+        └── <a href="assets/stella/1.png">s1.png</a>
 </pre>
 </div>
 
