--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,20 @@
 
     <title>Obsidienne</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
 
 <div class="terminal">
-<header>Obsidienne - Terminal</header>
+<header><div class="ellipsis">
+    [<a class="user" href="/">Obsidienne</a>][<span class="host">gitlab.io</span>][<span class="path">~/public</span>][<span class="repo">master</span>]
+</div></header>
 
+<section>
 <pre>
-<span class="comment"># Projects</span>
-┌[<span class="user">obsidienne</span>][<span class="host">gitlab.io</span>][<span class="path">~/public</span>]
-└> tree --noreport
-.
+<span class="cmnt"># Projects</span>
+> tree --noreport
 ├── Repositories
 │   ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
 │   └── <a href="https://github.com/ObsidianWitch">github.com</a>
@@ -29,6 +30,7 @@
         ├── <a href="assets/stella/readme.txt">readme.txt</a>
         └── <a href="assets/stella/1.png">s1.png</a>
 </pre>
+</section>
 </div>
 
 </body>
