--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,7 @@
 │   ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
 │   └── <a href="https://github.com/ObsidianWitch">github.com</a>
 └── 3D Models
-    └── Stella
-        ├── <a href="assets/stella/readme.txt">readme.txt</a>
-        └── <a href="assets/stella/1.png">s1.png</a>
+    └── <a href="https://gitlab.com/Obsidienne/obsidienne.gitlab.io/tree/master/public/assets/stella">Stella</a>
 </pre>
 </section>
 </div>
