assets - rm stella

--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,9 @@
 <pre>
 <span class="cmnt"># Projects</span>
 > tree --noreport
-├── Repositories
-│   ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
-│   └── <a href="https://github.com/ObsidianWitch">github.com</a>
-└── 3D Models
-    └── <a href="https://gitlab.com/Obsidienne/obsidienne.gitlab.io/tree/master/public/assets/stella">Stella</a>
+└── Repositories
+    ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
+    └── <a href="https://github.com/ObsidianWitch">github.com</a>
 </pre>
 </section>
 </div>
