index - link to RSS feed

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@ Repositories
 └── <a href="https://github.com/ObsidianWitch">github.com</a>
 </pre>
 
-<h1>Posts</h1>
+<h1>Posts<a class="muted" href="/rss.xml">[RSS]</a></h1>
 
 <nav class="posts"><ul>
 <li><date>2019-07-25</date> <a href="/posts/01_android_3button.html">Restore Android 3-button navigation</a></li>
