posts:tags - publish

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@ Repositories
 <h1>Posts<a class="muted" href="/rss.xml">[RSS]</a></h1>
 
 <nav class="posts"><ul>
+<li><date>2020-04-11</date> <a href="/posts/03_tags.html">File tags</a></li>
 <li><date>2020-02-27</date> <a href="/posts/02_gitlabci.html">Test .gitlab-ci.yml</a></li>
 <li><date>2019-07-25</date> <a href="/posts/01_android_3button.html">Restore Android 3-button navigation</a></li>
 <li><date>2019-06-02</date> <a href="/posts/00_fzf_bash_completion.html">Fuzzy bash completion</a></li>
