--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@ Graphics
 <h1>Posts<a class="muted" href="/rss.xml">[RSS]</a></h1>
 
 <nav class="posts"><ul>
-<li><date>2020-09-04</date> <a href="/posts/04_scrape.html">Automate downloads</a></li>
+<li><date>2020-09-04</date> <a href="/posts/04_webscraping.html">Automate downloads</a></li>
 <li><date>2020-04-11</date> <a href="/posts/03_tags.html">File tags</a></li>
 <li><date>2020-02-27</date> <a href="/posts/02_gitlabci.html">Test .gitlab-ci.yml</a></li>
 <li><date>2019-07-25</date> <a href="/posts/01_android_3button.html">Restore Android 3-button navigation</a></li>
