--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 <li><a href="/assets/magitek1.svg">SVG magitek animation</a></li>
 </ul>
 
-<h1>Posts<a class="muted" href="/rss.xml">[RSS]</a></h1>
+<h1>Posts · <a href="/rss.xml">RSS</a></h1>
 
 <ul>
 <li><date>2020-09-04</date> <a href="/posts/04_webscraping.html">Automate downloads</a></li>
